--- a/notes.org
+++ b/notes.org
@@ -1278,8 +1278,35 @@ let num_valid_char = password.chars().filter(|c| *c == valid_char).count();
 *** Day3 
 
 [[https://adventofcode.com/2020/day/3][Day 3: Toboggan Trajectory]]
+- Source code: https://github.com/Aimeedeer/adventofcode/tree/master/day3
 
+Iterator: 
 
+#+begin_src rust
+// skip lines
+for line in reader.lines().step_by(move_down) { ... }
+
+// get interator's index while looping
+for (line_index, line_value) in reader.lines().enumerate() { ... }
+#+end_src
+
+Put mutable variables in the same block of code while changing their values.
+For example, the ~index~ below.
+
+#+begin_src rust
+    for line in reader.lines().step_by(move_down) {
+	let rules = line?;
+	let rules = rules.chars().collect::<Vec<char>>();
+	let char_num = rules.len();
+
+	if rules[index] == '#' {
+	    tree_num += 1;
+	} 
+
+	index += move_right;
+	index %= char_num;
+    }
+#+end_src
 
 ** State Machines                                         :cs:state:@hacking:
 :PROPERTIES:
@@ -1904,7 +1931,6 @@ Emacs Lisp: [[https://www.gnu.org/software/emacs/manual/html_node/eintr/index.ht
 - [[https://www.youtube.com/watch?v=-J_xL4IGhJA&list=PLE18841CABEA24090][MIT 6.001 Structure and Interpretation, 1986]]
 - [[https://www.youtube.com/watch?v=IcZSFewqr9k&list=PLkEwH_Z2WOlppy8oUfrGwFVlOuKyo3RO_&index=1][SICP]] mirror with Chinese script
 
-
 ** Haskell
 :PROPERTIES:
 :EXPORT_FILE_NAME: haskell
@@ -1958,16 +1984,25 @@ Paper: [[https://www.lua.org/doc/jucs05.pdf][The Implementation of Lua 5.0]]
 :EXPORT_OPTIONS: toc:2
 :END:
 
+Game programming.
+
+*** Languages
+
+[[https://macoy.me/blog/programming/CakelispIntro][Cakelisp: a programming language for games]]
+
+[[https://en.wikipedia.org/wiki/Game_Oriented_Assembly_Lisp][Game Oriented Assembly Lisp]]
+
+Rustlisp for game dev: https://gamelisp.rs/
+
+*** Posts
+
+[[https://all-things-andy-gavin.com/2011/03/12/making-crash-bandicoot-gool-part-9/][Making Crash Bandicoot – GOOL – part 9]]
+
 [[https://mfiano.net/posts/Gamedev-Sleep-Repeat.html][Gamedev, Sleep, Repeat]]
 > Game engines are large systems consisting of many moving parts. Good software engineering requires simplicity -- it is what allows a system to remain secure, stable, and coherent throughout its evolution. Simplicity itself requires a lot of work at the start of a project to reduce the idea to its essense, and lots of discipline over the lifetime of the project to be able to distinguish worthwhile changes from the pernicious ones. That is simply everything my game engine is not, because for such a complex piece of software such as a game engine, it is not easy to know HOW all the pieces fit together, just some vague idea. Complexity arises through the iterative process that is implementing and actually debugging problems with these features. Making a small change to get a engine feature to play nice with others could, and often does, adversely affects simplicity and elegance much later down the road during development.
 
 [[https://mfiano.net/posts/Follow-up-to-Gamedev-Sleep-Repeat.html][Follow up to Gamedev, Sleep, Repeat]]
 >  I am less interested in making games, and more interested in the design of game engines. A game engine is interesting to me because it requires discipline in many fields of study, and each implementation is different. The thing is, a game engine is a piece of software that manages the data flow for a particular game, or a particular category of games. It is nothing more than a set of choices someone made for you in order to write games in a particular way. Any given game engine could be productive or counter-productive in creating your game. Even using a general purpose game engine like Unity and Unreal is a trade-off, and for a significant game, you'll find you still have to work around or reimplement core engine features at the 11th hour to get your game shipped.
-
-
-[[https://macoy.me/blog/programming/CakelispIntro][Cakelisp: a programming language for games]]
-
-[[https://en.wikipedia.org/wiki/Game_Oriented_Assembly_Lisp][Game Oriented Assembly Lisp]]
 
 ** PGP                                      :pgp:keybase:protonmail:@hacking:
 :PROPERTIES:
