--- a/notes.org
+++ b/notes.org
@@ -1314,6 +1314,9 @@ For example, the ~index~ below.
 [[https://adventofcode.com/2020/day/4][Day 4: Passport Processing]]
 - Source code: https://github.com/Aimeedeer/adventofcode/tree/master/day4
 
+
+
+
 ** State Machines                                         :cs:state:@hacking:
 :PROPERTIES:
 :EXPORT_FILE_NAME: state-machines
@@ -1939,7 +1942,7 @@ Emacs Lisp: [[https://www.gnu.org/software/emacs/manual/html_node/eintr/index.ht
 - [[https://www.youtube.com/watch?v=-J_xL4IGhJA&list=PLE18841CABEA24090][MIT 6.001 Structure and Interpretation, 1986]]
 - [[https://www.youtube.com/watch?v=IcZSFewqr9k&list=PLkEwH_Z2WOlppy8oUfrGwFVlOuKyo3RO_&index=1][SICP]] mirror with Chinese script
 
-** Haskell
+** Haskell                                                 :haskell:@hacking:
 :PROPERTIES:
 :EXPORT_FILE_NAME: haskell
 :EXPORT_DATE: 2020-12-20
