--- a/notes.org
+++ b/notes.org
@@ -2225,6 +2225,14 @@ Rustlisp for game dev: https://gamelisp.rs/
 
 *** Posts and videos
 
+[[http://worrydream.com/#!/LearnableProgramming][Learnable Programming]]
+
+> - Not only skills but also a way of thinking
+> - Get something on the screen as soon as possible
+> - Create by reacting
+
+[[https://nullprogram.com/blog/2017/04/27/][Two Games with Monte Carlo Tree Search]]
+
 Video: [[https://www.youtube.com/watch?v=YyIQKBzIuBY][Alan Kay - Programming and Scaling]]
 
 Video: [[https://www.youtube.com/watch?v=IGMiCo2Ntsc][Bret Victor - The Future of Programming]]
@@ -2296,6 +2304,12 @@ Boos that are [[https://lostgarden.home.blog/worth-reading/][worth reading]]
 > - Using a compiled language to solve the puzzles won’t give you any noticeable speed advantage over using an interpreted language. If your code is still working on a solution after about a minute, you’re probably taking the wrong approach. To quote the “About” page, “every problem has a solution that completes in at most 15 seconds on ten-year-old hardware”.
 
 [[https://blog.vero.site/post/advent-leaderboard][Advent of Code: How to Leaderboard]]
+
+> Another aspect is the unique two-part format of each puzzle. Even though they use the same input, you don’t get to see the second part until after you’ve solved the first one, a feature that Eric Wastl (AoC’s creator) has taken full advantage of in designing puzzles. The second part is often a surprising twist on the first part, which keeps you on your toes and challenges you to keep your code moderately general or refactorable in a way that I think almost no other programming challenges do. This sometimes even happens between days in a calendar, when a puzzle turns out to be about some model of computation you implemented two or five or ten days ago — hope you kept your code and remember how it works!
+
+[[http://web.mit.edu/puzzle/www/][MIT Puzzle Club]]
+
+[[https://web.mit.edu/puzzle/www/2014/round/knights/][The Red and White Knights]]
 
 [[https://github.com/Bogdanp/awesome-advent-of-code][Awesome AoC]]
 
