--- a/notes.org
+++ b/notes.org
@@ -261,9 +261,13 @@ and ~bail~ instead of ~anyhow~ for returning a result with an error message.
 
 TODO:
 
-- [ ] Game contract 0.05
+- [ ] Game contract demo
 
 *** My hacklog
+
+**** 2021-01-09
+
+
 
 **** 2021-01-07
 
@@ -271,7 +275,7 @@ Test code:
 
 #+begin_src rust
         #[ink(message, payable)]
-        pub fn run_leve_test(&mut self) -> bool {
+        pub fn run_level_test(&mut self) -> bool {
             let program_id = "4cfac7f74c6233449b5e54ba070231dd94c71b89505482cd910000656258d3ed";
 
             ink_env::debug_println(&format!("hash {:?}", program_id));
