--- a/notes.org
+++ b/notes.org
@@ -15,7 +15,7 @@
 :EXPORT_OPTIONS: toc:2
 :END:
 
-*GitHub repo*: https://github.com/Aimeedeer/adventofcode
+*GitHub repo*: https://github.com/Aimeedeer/adventofcode-2020
 
 *** Read and Learned
 
@@ -32,7 +32,7 @@
 
 [[https://adventofcode.com/2020/day/1][Day 1: Report Repair]]
 
-- Source code: https://github.com/Aimeedeer/adventofcode/tree/master/day1
+- Source code: https://github.com/Aimeedeer/adventofcode-2020/tree/master/day1
 - Question: a better performance solution than 3 loops?
 - [[https://fasterthanli.me/series/advent-of-code-2020/part-1][Other one's practice]]. Good to learn another totally different approach.
 His code:
@@ -67,7 +67,7 @@ for a side effect, it's considered more idiomatic to use ~for~ than ~map()~.
 *** Day2
 
 [[https://adventofcode.com/2020/day/2][Day 2: Password Philosophy]]
-- Source code: https://github.com/Aimeedeer/adventofcode/tree/master/day2
+- Source code: https://github.com/Aimeedeer/adventofcode-2020/tree/master/day2
 
 Use ~regex~ for parsing ~String~.
 #+begin_src rust
@@ -100,7 +100,7 @@ let num_valid_char = password.chars().filter(|c| *c == valid_char).count();
 *** Day3 
 
 [[https://adventofcode.com/2020/day/3][Day 3: Toboggan Trajectory]]
-- Source code: https://github.com/Aimeedeer/adventofcode/tree/master/day3
+- Source code: https://github.com/Aimeedeer/adventofcode-2020/tree/master/day3
 
 Iterator: 
 
@@ -133,7 +133,7 @@ For example, the ~index~ below.
 *** Day4
 
 [[https://adventofcode.com/2020/day/4][Day 4: Passport Processing]]
-- Source code: https://github.com/Aimeedeer/adventofcode/tree/master/day4
+- Source code: https://github.com/Aimeedeer/adventofcode-2020/tree/master/day4
 
 Learned to organize a mod:
 - ~fn main~ first
@@ -199,7 +199,7 @@ created each time in the loop.
 *** Day5
 
 [[https://adventofcode.com/2020/day/5][Day 5: Binary Boarding]]
-- Source code: https://github.com/Aimeedeer/adventofcode/tree/master/day5
+- Source code: https://github.com/Aimeedeer/adventofcode-2020/tree/master/day5
 
 Use const for ~8~. The magical number is defined in the problem description.
 
@@ -250,6 +250,36 @@ fn search_id(
 Learned ~(0..10).into_iter()~, 
 and ~bail~ instead of ~anyhow~ for returning a result with an error message.
 
+*** Day6
+
+An easy puzzle, counting chars.
+
+*** Day7
+
+Started using ~lazy_static~:
+
+#+begin_src rust
+extern crate lazy_static;
+use lazy_static::lazy_static;
+
+lazy_static! {
+    static ref RE: Regex = Regex::new(r"^(\w+ \w+) bags contain (.*)$").unwrap();
+}
+#+end_src
+
+Recursive functions in Rust:
+
+#+begin_src rust
+fn is_my_bag_in_map(candidate_bag: &str, map: &HashMap<String, HashMap<String, u32>>) -> bool {
+    ...
+}
+
+fn bags_contained(candidate_bag: &str, map: &HashMap<String, HashMap<String, u32>>) -> u32 {
+    ...
+}
+#+end_src
+
+
 ** Captain Game                                 :rust:smartcontract:@hacking:
 :PROPERTIES:
 :EXPORT_FILE_NAME: captain-game
@@ -265,9 +295,9 @@ TODO:
 
 *** My hacklog
 
-**** 2021-01-09
+**** 2021-01-14
 
-
+- [ ] figure out ~contract trapped~ 
 
 **** 2021-01-07
 
@@ -2006,6 +2036,10 @@ Book: [[https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book-Z-
 
 
 *** Rust language
+
+[[https://lborb.github.io/book/][The Little Book of Rust Books]]
+
+[[https://rust-unofficial.github.io/too-many-lists/index.html][Learn Rust With Entirely Too Many Linked Lists]]
 
 [[https://people.mpi-sws.org/~jung/phd/thesis-screen.pdf][Understanding and Evolving the Rust Programming Language]] August 2020
 
