--- a/notes.org
+++ b/notes.org
@@ -297,9 +297,7 @@ TODO:
 
 **** 2021-01-14
 
-- [ ] figure out ~contract trapped~ 
-
-Debug:
+Debug ~contract trapped~ 
 
 #+begin_src shell
 2021-01-14 16:34:36.014  DEBUG tokio-runtime-worker runtime:DispatchError    
